--- a/src/racadauto/Modificar_cargo.form
+++ b/src/racadauto/Modificar_cargo.form
@@ -31,12 +31,10 @@
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="JT_nom" min="-2" pref="130" max="-2" attributes="0"/>
                   </Group>
-                  <Component id="jScrollPane1" alignment="0" pref="0" max="32767" attributes="0"/>
+                  <Component id="jScrollPane1" alignment="0" pref="393" max="32767" attributes="0"/>
                   <Group type="102" alignment="0" attributes="0">
                       <Component id="JB_OK" min="-2" pref="74" max="-2" attributes="0"/>
-                      <EmptySpace type="separate" max="-2" attributes="0"/>
-                      <Component id="LBL_estado" min="-2" pref="220" max="-2" attributes="0"/>
-                      <EmptySpace type="separate" max="32767" attributes="0"/>
+                      <EmptySpace max="32767" attributes="0"/>
                       <Component id="JB_cancel" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <Component id="jLabel9" alignment="0" min="-2" max="-2" attributes="0"/>
@@ -57,13 +55,10 @@
                   <Component id="jLabel2" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="JT_nom" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace type="separate" max="32767" attributes="0"/>
+              <EmptySpace type="separate" pref="22" max="32767" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="103" alignment="1" groupAlignment="0" attributes="0">
-                      <Component id="JB_cancel" alignment="1" min="-2" max="-2" attributes="0"/>
-                      <Component id="JB_OK" min="-2" max="-2" attributes="0"/>
-                  </Group>
-                  <Component id="LBL_estado" alignment="1" min="-2" pref="27" max="-2" attributes="0"/>
+                  <Component id="JB_cancel" alignment="1" min="-2" max="-2" attributes="0"/>
+                  <Component id="JB_OK" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
@@ -94,8 +89,6 @@
         </Property>
         <Property name="text" type="java.lang.String" value="RACAD AUTOMOTRIZ - MODIFICAR CARGO"/>
       </Properties>
-    </Component>
-    <Component class="javax.swing.JLabel" name="LBL_estado">
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel2">
       <Properties>
